--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "concurrently \"npm run dev --prefix client\" \"npm run dev --prefix server\"",
     "build": "npm run build --prefix client && npm run build --prefix server",
     "start": "npm run start --prefix client & npm run start --prefix server",
-    "install:all": "npm install --prefix client && npm install --prefix server"
+    "install:all": "npm install --prefix client && npm install --prefix server && npm install"
   },
   "license": "MIT",
   "dependencies": {
