--- a/package.json
+++ b/package.json
@@ -6,14 +6,11 @@
     "dev": "concurrently \"npm run dev --prefix client\" \"npm run dev --prefix server\"",
     "build": "npm run build --prefix client && npm run build --prefix server",
     "start": "npm run start --prefix client & npm run start --prefix server",
-    "install:all": "npm install --prefix client && npm install --prefix server"
+    "install:all": "npm install --prefix client && npm install --prefix server && npm install"
   },
   "license": "MIT",
   "dependencies": {
     "concurrently": "^9.1.2",
     "dotenv": "^16.4.7"
-  },
-  "devDependencies": {
-    "@types/node": "^22.13.1"
   }
 }
