--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/postcss": "^4.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "flyonui": "^1.3.0",
     "framer-motion": "^12.3.1",
     "lucide-react": "^0.474.0",
     "next": "^15.1.7",
@@ -23,6 +24,8 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "tripmateai": "file:.."
@@ -32,6 +35,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-slick": "^0.23.13",
     "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
