--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "flyonui": "^1.3.0",
     "framer-motion": "^12.3.1",
     "lucide-react": "^0.474.0",
+    "mapbox-gl": "^3.10.0",
     "next": "^15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -26,6 +27,7 @@
     "react-router-dom": "^7.1.5",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "tripmateai": "file:.."
