--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "pg": "^8.13.1",
+    "socket.io": "^4.8.1",
     "tripmateai": "file:.."
   }
 }
