--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint . --config eslint.config.mjs --ext .ts,.tsx"
   },
   "dependencies": {
+    "@mapbox/search-js-react": "^1.0.0",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-select": "^2.1.6",
     "@supabase/ssr": "^0.5.2",
