--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --exec tsx --loader ts-node/esm src/index.ts",
+    "build": "tsc",
     "start": "node dist/index.js"
   },
   "keywords": [],
