--- a/package.json
+++ b/package.json
@@ -12,10 +12,17 @@
   "dependencies": {
     "@huggingface/inference": "^3.5.1",
     "@llama-node/llama-cpp": "^0.1.6",
+    "@pinecone-database/pinecone": "^5.1.1",
+    "@xenova/transformers": "^2.17.2",
     "concurrently": "^9.1.2",
     "dotenv": "^16.4.7",
     "llama-node": "^0.1.6",
     "node-fetch": "^3.3.2",
     "openai": "^4.87.3"
+  },
+  "devDependencies": {
+    "ts-node": "^10.9.2",
+    "tsx": "^4.19.3",
+    "typescript": "^5.8.2"
   }
 }
