--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@llama-node/llama-cpp": "^0.1.6",
     "@pinecone-database/pinecone": "^5.1.1",
     "@xenova/transformers": "^2.17.2",
+    "axios": "^1.8.4",
     "concurrently": "^9.1.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "llama-node": "^0.1.6",
     "node-fetch": "^3.3.2",
     "openai": "^4.87.3"
