--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/postcss": "^4.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "flyonui": "^1.3.0",
     "framer-motion": "^12.3.1",
     "lucide-react": "^0.474.0",
