--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,8 +1,8 @@
 {
     "compilerOptions": {
-      "module": "ESNext", 
+      "module": "NodeNext", 
       "target": "ESNext", 
-      "moduleResolution": "node",
+      "moduleResolution": "nodenext",
       "esModuleInterop": true,
       "outDir": "./dist",
       "rootDir": "./src",
