--- a/server/package.json
+++ b/server/package.json
@@ -22,10 +22,14 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
+    "@langchain/core": "^0.3.43",
+    "@langchain/deepseek": "^0.0.1",
     "@supabase/supabase-js": "^2.48.1",
     "cors": "^2.8.5",
+    "deepseek": "^0.0.2",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "langchain": "^0.3.19",
     "pg": "^8.13.1",
     "socket.io": "^4.8.1",
     "tripmateai": "file:.."
