--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@mapbox/search-js-react": "^1.0.0",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-select": "^2.1.6",
+    "@reduxjs/toolkit": "^2.6.1",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.48.1",
     "@tailwindcss/postcss": "^4.0.3",
