--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-markdown": "^10.1.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
@@ -44,6 +45,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-redux": "^7.1.34",
     "@types/react-slick": "^0.23.13",
     "autoprefixer": "^10.4.20",
     "eslint": "^9",
