--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint . --config eslint.config.mjs --ext .ts,.tsx"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.16.8",
     "@mapbox/search-js-react": "^1.0.0",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-select": "^2.1.6",
@@ -18,14 +19,15 @@
     "@tailwindcss/postcss": "^4.0.3",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
+    "@vis.gl/react-google-maps": "^1.5.2",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "flyonui": "^1.3.0",
     "framer-motion": "^12.3.1",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.474.0",
-    "mapbox-gl": "^3.10.0",
     "next": "^15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -42,6 +44,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
