--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,10 @@
     "lint": "eslint . --config eslint.config.mjs --ext .ts,.tsx"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
     "@googlemaps/js-api-loader": "^1.16.8",
+    "@headlessui/react": "^2.2.2",
     "@mapbox/search-js-react": "^1.0.0",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-select": "^2.1.6",
