--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,8 +1,8 @@
 {
     "compilerOptions": {
-      "module": "NodeNext", 
-      "target": "ESNext", 
-      "moduleResolution": "nodenext",
+      "module": "CommonJS", 
+      "target": "ES2020", 
+      "moduleResolution": "node",
       "esModuleInterop": true,
       "outDir": "./dist",
       "rootDir": "./src",
