feat: Refactor authentication and chat functionality; integrate axios for Google Places API

--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "@langchain/deepseek": "^0.0.1",
     "@supabase/supabase-js": "^2.48.1",
     "amadeus": "^11.0.0",
+    "axios": "^1.9.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "deepseek": "^0.0.2",
