--- a/client/package.json
+++ b/client/package.json
@@ -40,6 +40,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
     "react-slick": "^0.30.3",
+    "react-virtuoso": "^4.12.7",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.0.2",
