--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "concurrently \"npm run dev --prefix client --host\" \"npm run dev --prefix server --host\"",
     "build": "npm run build --prefix client && npm run build --prefix server",
-    "start": "npm run start --prefix client & npm run start --prefix server",
+    "start": "concurrently \"npm run start --prefix client --host\" \"npm run start --prefix server --host\"",
     "install:all": "npm install --prefix client && npm install --prefix server && npm install"
   },
   "license": "MIT",
